@@ -8,6 +8,7 @@ with 'Dist::Zilla::Role::FileGatherer';
 use MooseX::Types::Moose 'ArrayRef';
 use Path::Tiny;
 use Dist::Zilla::File::OnDisk;
+use Dist::Zilla::Util;
 use namespace::autoclean;
 
 =head1 SYNOPSIS
@@ -20,8 +21,7 @@ use namespace::autoclean;
 This is a very, very simple L<FileGatherer|Dist::Zilla::Role::FileGatherer>
 plugin.  It adds all the files referenced by the C<filename> option that are
 found in the directory named in the L</root> attribute.  If the root begins
-with a tilde, the tilde is replaced with the current user's home directory
-according to L<File::HomeDir>.
+with a tilde, the tilde is passed through C<glob()> first.
 
 Since normally every distribution will use a GatherDir plugin, you would only
 need to use the GatherFile plugin if the file was already being excluded (e.g.
@@ -97,7 +97,7 @@ sub gather_files {
 
   my $repo_root = $self->zilla->root;
   my $root = "" . $self->root;
-  $root =~ s{^~([\\/])}{require File::HomeDir; File::HomeDir::->my_home . $1}e;
+  $root =~ s{^~([\\/])}{ Dist::Zilla::Util->homedir . $1 }e;
   $root = path($root);
   $root = $root->absolute($repo_root) if path($root)->is_relative;
 
